--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -249,8 +249,8 @@
             "error: the following required tools": "Developer Error: Compilation",
             "configure: error": "Developer Error: Compilation",
             "ninja failed with: exit status 1": "Developer Error: Compilation",
-            "fatal: couldn't find remote ref": "Developer Error: Compilation",
-            "could not read from remote repository": "Developer Error: Compilation",
+            "fatal: couldn't find remote ref": "Developer Error: Configuration",
+            "could not read from remote repository": "Developer Error: Configuration",
             "error: cannot fetch": "Developer Error: Compilation",
             "couldn't find any revision to build": "Developer Error: Configuration",
             "fatal: cannot obtain manifest https://git": "Developer Error: Configuration",
