--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -421,7 +421,7 @@
             "DOCKER CONTAINER RELATED ERROR": "DOCKER CONTAINER Related Error",
             
             "error: no such container": "Application Error: Container",
-            "remote call to": "Application Error: Node",
+            "remote call to": "Application Error: Proxy",
 
             "GENERIC APPLICATION ERROR": "Generic Application Error",
             
