--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -419,8 +419,6 @@
             
             "error: no such container": "Application Error: Container",
             
-            "remote call to": "Application Error: Node",
-            "the remote end hung up unexpectedly": "Application Error: Node",
             "received http code 302 from proxy after connect": "Application Error: Proxy",
 
             "GENERIC APPLICATION ERROR": "Generic Application Error",
@@ -466,6 +464,8 @@
             "sudo: /usr/bin/sudo": "System Error",
             "error: missing workspace .*. on": "System Error",
             "could not insert module": "System Error",
+            "remote call to": "System Error",
+            "the remote end hung up unexpectedly": "System Error",
             "git clone .*. failed to complete successfully with the following errors": "System Error",
             
             "VISUAL STUDIO ERROR": "Visual Studio Error",
