Update error_config.json (#1428)

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -125,7 +125,8 @@
             "failed on a \"put\"",
             "rsync:",
             "error: no such container",
-            "suppressed: hudson.remoting"
+            "suppressed: hudson.remoting",
+            "unable to delete"
         ],
 
         "error_category": {
