--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -282,7 +282,6 @@
             "fatal: the remote end hung up upon initial contact": "Connectivity Error: Git",
             "fatal: cannot get .*. ": "Connectivity Error: Git",
             "fatal: index-pack failed": "Application Error: Git",
-            "fatal: fetch-pack: invalid index-pack output": "Configuration Error: Git",
 
             "ARTIFACTORY RELATED ERROR": "Artifactory Related Error",
             
@@ -568,7 +567,8 @@
             "no names found, cannot describe anything",
             "embedconflict",
             "kwbuildproject",
-            "openssl ssl_read: no error information"
+            "openssl ssl_read: no error information",
+            "fatal: fetch-pack: invalid index-pack output"
         ]
     }
 }
