Updated the RCA config file (#1585)

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -23,7 +23,6 @@
             "verify failed",
             "failed to load",
             "failed to build",
-            "failed to fetch",
             "failed to push",
             "failed to deploy",
             "failed to merge",
@@ -60,7 +59,6 @@
             "there are no nodes",
             "not recognized",
             "cannot stat",
-            "test result",
             "connectionrefusederror",
             "abi_err",
             "abiexception",
@@ -92,7 +90,6 @@
             "results is not yet ready",
             "exec user process",
             "couldn't find any revision",
-            "error fetching",
             "error: cannot fetch",
             "please check bblayers",
             "traceback (most recent call last):",
@@ -244,6 +241,7 @@
             "errorlevel=1": "Developer Error: Compilation",
             "syntaxerror: invalid syntax": "Developer Error: Compilation",
             "summary: there were .*. error messages shown, returning a non-zero exit code": "Developer Error: Compilation",
+            "summary: there were .*. error messages, returning a non-zero exit code": "Developer Error: Compilation",
             "summary: there was 1 error message shown, returning a non-zero exit code": "Developer Error: Compilation",
             "summary: there was 1 error message, returning a non-zero exit code": "Developer Error: Compilation",
             "error: parseerror in configuration": "Developer Error: Compilation",
@@ -268,6 +266,7 @@
             "remote: unauthorized":"Configuration Error: Git",
             "fatal: repository": "Connectivity Error: Git",
             "git clone": "Connectivity Error: Git",
+            "fatal: error tunnel connection failed": "Connectivity Error: Git",
             "cloning the git-repo": "Connectivity Error: Git",
             "error: failed to push some refs to": "Connectivity Error: Git",
             "failed to fetch from https://gitlab": "Connectivity Error: Git",
@@ -331,6 +330,7 @@
             "kwinject: not found": "Application Error: Klocwork",
             "error occurred during build: could not connect to https://klocwork": "Connectivity Error: Klocwork",
             "kwdeploy: connection to": "Connectivity Error: Klocwork",
+            "kwdeploy: authentication failed": "Authentication Error: Klocwork",
             "failed with --ignore mode enabled. please check": "Connectivity Error: Klocwork",
             "returned non-zero exit status": "Configuration Error: Klocwork",
             "unable to connect to the klocwork server": "Application Error: Klocwork",
@@ -463,7 +463,7 @@
             "java.io.ioexception: unable to create live filepath": "System Error",
             "java.io.ioexception: .*. exist": "System Error",
             "jenkins.util.io.compositeioexception: unable to delete": "Workspace Deletion Error",
-            "jenkins.util.io.compositeioexception: unable to remove directory": "Workspace Deletion Error",
+            "jenkins.util.io.compositeioexception: unable to remove": "Workspace Deletion Error",
             "sudo: /usr/bin/sudo": "System Error",
             "error: missing workspace .*. on": "System Error",
             "could not insert module": "System Error",
@@ -567,6 +567,8 @@
             "no names found, cannot describe anything",
             "embedconflict",
             "kwbuildproject",
+            "file in files list",
+            "not a git repository",
             "openssl ssl_read: no error information",
             "fatal: fetch-pack: invalid index-pack output"
         ]
