--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -471,6 +471,7 @@
             "remote call to": "System Error",
             "the remote end hung up unexpectedly": "System Error",
             "git clone .*. failed to complete successfully with the following errors": "System Error",
+            "java.io.ioexception: input/output error": "System Error",
             
             "VISUAL STUDIO ERROR": "Visual Studio Error",
             
