--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -434,6 +434,7 @@
             "abortexception:": "Application Error",
             "configuration error": "Application Error",
             "server error": "Application Error",
+            "fatal: error parsing manifest": "Configuration Error",
 
             "GENERIC CONNECTIVITY ERROR": "Generic Connectivity Error",
             
