--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -575,7 +575,8 @@
             "not a git repository",
             "openssl ssl_read: no error information",
             "fatal: fetch-pack: invalid index-pack output",
-            "tianocore/edk2.git"
+            "tianocore/edk2.git",
+            "openembedded"
         ]
     }
 }
