--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -124,6 +124,7 @@
             "error: no such container",
             "suppressed: hudson.remoting",
             "unable to delete",
+            "callsitestacktrace: remote call to",
             "unable to remove directory"
         ],
 
