--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -282,6 +282,7 @@
             "fatal: the remote end hung up upon initial contact": "Connectivity Error: Git",
             "fatal: cannot get .*. ": "Connectivity Error: Git",
             "fatal: index-pack failed": "Application Error: Git",
+            "unable to access 'https://github.com/intel-innersource": "Configuration Error: Git",
 
             "ARTIFACTORY RELATED ERROR": "Artifactory Related Error",
             
