--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -587,7 +587,8 @@
             "not our ref",
             "openembedded",
             "failed to unpack tree object",
-            "bad line length character"
+            "bad line length character",
+            "unpack-objects failed"
         ]
     }
 }
