--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -260,6 +260,8 @@
             "fatal: could not create work tree": "Developer Error: Configuration",
             "failed to run notepad using mouse and keyboard emulator": "Developer Error: Compilation",
             "couldn't find a tree builder with the features you requested": "Developer Error: Compilation",
+            "target .*. does not exist": "Developer Error: Compilation",
+            ".*. does not exist. try to compile from sources": "Developer Error: Compilation",
 
             "GIT RELATED ERROR": "Git Related Error",
             
@@ -379,6 +381,7 @@
             "\\[bdba\\] \\[error\\] \\[bdba\\] \\[error\\] httperror: 504": "Application Error: BDBA",
             "\\[bdba\\] \\[error\\] \\[bdba\\] \\[error\\] httperror: 415 - Entity body in unsupported format": "Application Error: BDBA",
             "\\[bdba\\] \\[error\\] source path/file is not exist": "Configuration Error: BDBA",
+            "\\[bdba\\] \\[error\\] urlerror: \\[errno 32\\] broken pipe": "Application Error: BDBA",
             
             "EMAIL RELATED ERROR": "EMAIL Error",
             
