--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -347,6 +347,7 @@
             "failed with --ignore mode enabled. please check": "Connectivity Error: Klocwork",
             "returned non-zero exit status": "Configuration Error: Klocwork",
             "unable to connect to the klocwork server": "Application Error: Klocwork",
+            "[klocwork] [error] build spec file does not exists": "Configuration Error: Klocwork",
 
             "JENKINS RELATED ERROR": "Jenkins Related Error",
             
@@ -491,6 +492,7 @@
             "git clone .*. failed to complete successfully with the following errors": "System Error",
             "java.io.ioexception: input/output error": "System Error",
             "fatal: out of memory": "System Error",
+            "fatal: remote error: resource_exhausted": "System Error",
             
             "VISUAL STUDIO ERROR": "Visual Studio Error",
             
@@ -597,7 +599,10 @@
             "openembedded",
             "failed to unpack tree object",
             "bad line length character",
-            "unpack-objects failed"
+            "unpack-objects failed",
+            "fatal: error reading section header",
+            "fatal: unexpected wanted-ref",
+            "smudge filter lfs failed"
         ]
     }
 }
