Update error_config.json (#1344)
* Update error_config.json

* fix: rm files

Signed-off-by: MDM Automation Script

Signed-off-by: MDM Automation Script
Co-authored-by: Yeo, Chee Ket <chee.ket.yeo@intel.com>

--- a/cac/adm/splunk/rca/error_config.json
+++ b/cac/adm/splunk/rca/error_config.json
@@ -490,6 +490,7 @@
             "remote call to": "System Error",
             "the remote end hung up unexpectedly": "System Error",
             "git clone .*. failed to complete successfully with the following errors": "System Error",
+            "failure in a Windows system call: The password for this account has expired": "System Error: Container",
             "java.io.ioexception: input/output error": "System Error",
             "fatal: out of memory": "System Error",
             "fatal: remote error: resource_exhausted": "System Error",
