--- a/dev/deployment.yml
+++ b/dev/deployment.yml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: myapp
+  name: nginx-deployment
 spec:
+  replicas: 2
   selector:
     matchLabels:
-      app: myapp
-  replicas: 2
+      app: nginx-test
   template:
     metadata:
       labels:
-        app: myapp
+        app: nginx-test
     spec:
       containers:
-      - name: myapp
-        image: nanajanashia/argocd-app:1.2
+      - name: nginx
+        image: nginx
         ports:
-        - containerPort: 8080
+        - containerPort: 80
