--- a/dev/service.yml
+++ b/dev/service.yml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: myapp-service
+  name: nginx-service
 spec:
   selector:
-    app: myapp
+    app: nginx-test
+  type: NodePort
   ports:
-  - port: 8080
-    protocol: TCP
-    targetPort: 8080
+    - port: 8080
+      targetPort: 80
+      nodePort: 30038
