--- a/dev/service.yml
+++ b/dev/service.yml
@@ -5,8 +5,8 @@ metadata:
 spec:
   selector:
     app: nginx-test
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 8080
     targetPort: 80
-    nodePort: 30038
+    protocol: TCP
